--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@types/node": "18.16.3",
+    "@prisma/client": "4.13.0",
     "@types/react": "18.2.0",
     "@types/react-dom": "18.2.1",
     "bcrypt": "^5.1.0",
@@ -17,14 +17,16 @@
     "eslint-config-next": "13.3.4",
     "jsonwebtoken": "^9.0.0",
     "next": "13.3.4",
-    "prisma": "^4.13.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "typescript": "5.0.4"
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
+    "@types/node": "18.16.3",
     "autoprefixer": "10.4.14",
     "postcss": "8.4.23",
-    "tailwindcss": "3.3.2"
+    "prisma": "^4.13.0",
+    "tailwindcss": "3.3.2",
+    "ts-node": "^10.9.1",
+    "typescript": "5.0.4"
   }
 }
