--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@prisma/client": "4.13.0",
+    "@types/bcrypt": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/react": "18.2.0",
     "@types/react-dom": "18.2.1",
     "bcrypt": "^5.1.0",
