--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "jsonwebtoken": "^9.0.0",
     "next": "13.3.4",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-scroll-parallax": "^3.4.2"
   },
   "devDependencies": {
     "@types/node": "18.16.3",
