--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@prisma/client": "4.13.0",
     "@react-spring/parallax": "^9.7.2",
+    "@tanstack/react-query": "^4.29.5",
     "@types/bcrypt": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/react": "18.2.0",
@@ -23,6 +24,7 @@
     "next": "13.3.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.8.0",
     "react-scroll-parallax": "^3.4.2"
   },
   "devDependencies": {
