--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.4",
     "jsonwebtoken": "^9.0.0",
+    "moment": "^2.29.4",
     "next": "13.3.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.8.0",
+    "react-moment": "^1.1.3",
     "react-parallax": "^3.5.1",
     "react-scroll-parallax": "^3.4.2"
   },
