--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@prisma/client": "4.13.0",
+    "@radix-ui/react-navigation-menu": "^1.1.3",
+    "@radix-ui/react-slot": "^1.0.2",
     "@react-spring/parallax": "^9.7.2",
     "@tanstack/react-query": "^4.29.5",
     "@types/bcrypt": "^5.0.0",
@@ -19,9 +21,12 @@
     "aws-sdk": "^2.1372.0",
     "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
+    "class-variance-authority": "^0.6.1",
+    "clsx": "^1.2.1",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.4",
     "jsonwebtoken": "^9.0.0",
+    "lucide-react": "^0.257.0",
     "moment": "^2.29.4",
     "next": "13.3.4",
     "react": "18.2.0",
@@ -29,7 +34,9 @@
     "react-icons": "^4.8.0",
     "react-moment": "^1.1.3",
     "react-parallax": "^3.5.1",
-    "react-scroll-parallax": "^3.4.2"
+    "react-scroll-parallax": "^3.4.2",
+    "tailwind-merge": "^1.13.2",
+    "tailwindcss-animate": "^1.0.6"
   },
   "devDependencies": {
     "@types/node": "18.16.3",
